--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					</div>
 				</article>
 				<!-- <input type="button" name="allNews" value="Все новости" class="all-news"> -->
-				<a class="all-news">Все новости</a>
+				<a class="all-news" href="#">Все новости</a>
 			</aside>
 			<div class="main-center">
 				<article class="news-1">
@@ -157,9 +157,9 @@
 						</div>
 					</div>
 				</article>
-				<div class="row">
-					<article class="news left-column">
-						<img src="img/news-bg-2.png">
+				<div class="center">
+					<div class="news-item">
+						<img class="news-img" src="img/news-bg-2.png">
 						<div class="news-data">
 							<div class="news-title-center">Алексей Навальный объявил акцию против пенсионной реформы 1 июля</div>
 							<div class="news-theme news-center-theme">/ Политика</div>
@@ -172,8 +172,8 @@
 								15
 							</div>
 						</div>
-					</article>
-					<article class="news right-column">
+					</div>
+					<div class="news-item">
 						<img src="img/news-bg-3.png">
 						<div class="news-data">
 							<div class="news-title-center">
@@ -189,10 +189,8 @@
 								36
 							</div>
 						</div>
-					</article>
-				</div>
-				<div class="row">
-					<article class="news left-column">
+					</div>
+					<div class="news-item">
 						<img src="img/news-bg-4.png">
 						<div class="news-data">
 							<div class="news-title-center">В России заработал стриминговый сервис YouTube</div>
@@ -206,8 +204,8 @@
 								10
 							</div>
 						</div>
-					</article>
-					<article class="news right-column">
+					</div>
+					<div class="news-item">
 						<img src="img/news-bg-5.png">
 						<div class="news-data">
 							<div class="news-title-center">Кейн признан лучшим игроком матча ЧМ-2018 Тунис — Англия</div>
@@ -221,8 +219,8 @@
 								25
 							</div>
 						</div>
-					</article>
-				</div>
+					</div>
+				  </div>
 			</div>
 			<aside class="right-aside">
 				<img src="img/baner1.png">
@@ -327,7 +325,7 @@
 						Туризм
 					</div>
 				</div>
-				<div class="row-footer" class="center-row-footer">
+				<div class="row-footer center-row-footer">
 					<img src="img/logo-footer.png" class="logo-footer">
 					<div class="element-footer">
 						Об агенстве
@@ -339,7 +337,7 @@
 						Опубликовать новость
 					</div>
 				</div>
-				<div class="row-footer" class="right-row-footer">
+				<div class="row-footer right-row-footer">
 					<img src="img/vk-logo.png">
 					<img src="img/fb-logo.png">
 					<img src="img/twitter-logo.png">
