--- a/index.html
+++ b/index.html
@@ -46,102 +46,104 @@
 				<div class="left-aside-title">
 					<h2>Новости дня</h2>
 				</div>
-				<article class="news">
-					<div class="news-title">
-						Кот Ахилл предсказал победу российской сборной над Египтом на ЧМ-2018
-					</div>
-					<div class="news-data">
-						<div class="news-theme">/ ЧМ по футболу</div>
-						<div class="news-time">
-							<img src="img/time.png">
-							10:48
+				<div class="container-for-article">
+					<article class="news">
+						<div class="news-title">
+							Кот Ахилл предсказал победу российской сборной над Египтом на ЧМ-2018
 						</div>
-						<div class="news-comment">
-							<img src="img/comment.png">
-							15
+						<div class="news-data">
+							<div class="news-theme">/ ЧМ по футболу</div>
+							<div class="news-time">
+								<img src="img/time.png">
+								10:48
+							</div>
+							<div class="news-comment">
+								<img src="img/comment.png">
+								15
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="news">
-					<div class="news-title">
-						«Нафтогаз»: суд разрешил заморозить активы «Газпрома» в Великобритании
-					</div>
-					<div class="news-data">
-						<div class="news-theme">/ Политика</div>
-						<div class="news-time">
-							<img src="img/time.png">
-							10:48
+					</article>
+					<article class="news">
+						<div class="news-title">
+							«Нафтогаз»: суд разрешил заморозить активы «Газпрома» в Великобритании
 						</div>
-						<div class="news-comment">
-							<img src="img/comment.png">
-							15
+						<div class="news-data">
+							<div class="news-theme">/ Политика</div>
+							<div class="news-time">
+								<img src="img/time.png">
+								10:48
+							</div>
+							<div class="news-comment">
+								<img src="img/comment.png">
+								15
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="news">
-					<div class="news-title">
-						Минтранс предписал оборудовать общественный транспорт кондиционерами
-					</div>
-					<div class="news-data">
-						<div class="news-theme">/ Транспорт</div>
-						<div class="news-time">
-							<img src="img/time.png">
-							10:48
+					</article>
+					<article class="news">
+						<div class="news-title">
+							Минтранс предписал оборудовать общественный транспорт кондиционерами
 						</div>
-						<div class="news-comment">
-							<img src="img/comment.png">
-							15
+						<div class="news-data">
+							<div class="news-theme">/ Транспорт</div>
+							<div class="news-time">
+								<img src="img/time.png">
+								10:48
+							</div>
+							<div class="news-comment">
+								<img src="img/comment.png">
+								15
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="news">
-					<div class="news-title">
-						Летние кафе Москвы временно закроются из-за непогоды
-					</div>
-					<div class="news-data">
-						<div class="news-theme">/ Погода</div>
-						<div class="news-time">
-							<img src="img/time.png">
-							10:48
+					</article>
+					<article class="news">
+						<div class="news-title">
+							Летние кафе Москвы временно закроются из-за непогоды
 						</div>
-						<div class="news-comment">
-							<img src="img/comment.png">
-							15
+						<div class="news-data">
+							<div class="news-theme">/ Погода</div>
+							<div class="news-time">
+								<img src="img/time.png">
+								10:48
+							</div>
+							<div class="news-comment">
+								<img src="img/comment.png">
+								15
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="news">
-					<div class="news-title">
-						Комплексное благоустройство Щелковского шоссе завершится в июне
-					</div>
-					<div class="news-data">
-						<div class="news-theme">/ Транспорт</div>
-						<div class="news-time">
-							<img src="img/time.png">
-							10:48
+					</article>
+					<article class="news">
+						<div class="news-title">
+							Комплексное благоустройство Щелковского шоссе завершится в июне
 						</div>
-						<div class="news-comment">
-							<img src="img/comment.png">
-							15
+						<div class="news-data">
+							<div class="news-theme">/ Транспорт</div>
+							<div class="news-time">
+								<img src="img/time.png">
+								10:48
+							</div>
+							<div class="news-comment">
+								<img src="img/comment.png">
+								15
+							</div>
 						</div>
-					</div>
-				</article>
-				<article class="news">
-					<div class="news-title">
-						В Москве назвали самое популярное мороженое у болельщиков ЧМ-2018
-					</div>
-					<div class="news-data">
-						<div class="news-theme">/ ЧМ по футболу</div>
-						<div class="news-time">
-							<img src="img/time.png">
-							10:48
+					</article>
+					<article class="news">
+						<div class="news-title">
+							В Москве назвали самое популярное мороженое у болельщиков ЧМ-2018
 						</div>
-						<div class="news-comment">
-							<img src="img/comment.png">
-							15
+						<div class="news-data">
+							<div class="news-theme">/ ЧМ по футболу</div>
+							<div class="news-time">
+								<img src="img/time.png">
+								10:48
+							</div>
+							<div class="news-comment">
+								<img src="img/comment.png">
+								15
+							</div>
 						</div>
-					</div>
-				</article>
+					</article>
+				</div>
 				<!-- <input type="button" name="allNews" value="Все новости" class="all-news"> -->
 				<a class="all-news" href="#">Все новости</a>
 			</aside>
@@ -158,7 +160,7 @@
 					</div>
 				</article>
 				<div class="center">
-					<div class="news-item">
+					<article class="news-item">
 						<img class="news-img" src="img/news-bg-2.png">
 						<div class="news-data">
 							<div class="news-title-center">Алексей Навальный объявил акцию против пенсионной реформы 1 июля</div>
@@ -172,8 +174,8 @@
 								15
 							</div>
 						</div>
-					</div>
-					<div class="news-item">
+					</article>
+					<article class="news-item">
 						<img src="img/news-bg-3.png">
 						<div class="news-data">
 							<div class="news-title-center">
@@ -189,8 +191,8 @@
 								36
 							</div>
 						</div>
-					</div>
-					<div class="news-item">
+					</article>
+					<article class="news-item">
 						<img src="img/news-bg-4.png">
 						<div class="news-data">
 							<div class="news-title-center">В России заработал стриминговый сервис YouTube</div>
@@ -204,8 +206,8 @@
 								10
 							</div>
 						</div>
-					</div>
-					<div class="news-item">
+					</article>
+					<article class="news-item">
 						<img src="img/news-bg-5.png">
 						<div class="news-data">
 							<div class="news-title-center">Кейн признан лучшим игроком матча ЧМ-2018 Тунис — Англия</div>
@@ -219,7 +221,7 @@
 								25
 							</div>
 						</div>
-					</div>
+					</article>
 				  </div>
 			</div>
 			<aside class="right-aside">
@@ -227,10 +229,10 @@
 				<img src="img/baner2.png" class="baner2">
 			</aside>
 			<article class="news-2">
-				<div class="news-1-theme">/ Политика</div>
-				<div class="news-1-title"><b>Пекин обвинил Вашингтон в развязывании торговой войны</b></div>
+				<div class="news-2-theme">/ Политика</div>
+				<div class="news-2-title"><b>Пекин обвинил Вашингтон в развязывании торговой войны</b></div>
 				<div class="news-1-data">
-					<div class="news-1-date">19 Июня 2018</div>
+					<div class="news-2-date">19 Июня 2018</div>
 					<div class="news-1-time">
 						<img src="img/clock.png">
 						10:48
@@ -241,13 +243,13 @@
 				</div>
 			</article>
 			<div class="famous-news">
-				<div class="left-aside-title"><b>Самые читаемые новости</b></div>
+				<div class="right-bottom-title"><b>Самые читаемые новости</b></div>
 				<article class="news">
-					<div class="news-title">
+					<div class="news-bottom-title">
 						<b>В Турции пообещали найти альтернативу из-за отказа США поставить F-35</b>
 					</div>
-					<div class="news-data">
-						<div class="news-theme">/ Политика</div>
+					<div class="news-bottom-data">
+						<div class="news-3-theme">/ Политика</div>
 						<div class="news-time">
 							<img src="img/time.png">
 							11:39
@@ -259,11 +261,11 @@
 					</div>
 				</article>
 				<article class="news">
-					<div class="news-title">
+					<div class="news-bottom-title">
 						<b>Назван минимальный доход для причисления к среднему классу‍</b>
 					</div>
-					<div class="news-data">
-						<div class="news-theme">/ Политика</div>
+					<div class="news-bottom-data">
+						<div class="news-3-theme">/ Политика</div>
 						<div class="news-time">
 							<img src="img/time.png">
 							11:39
@@ -275,11 +277,11 @@
 					</div>
 				</article>
 				<article class="news">
-					<div class="news-title">
+					<div class="news-bottom-title">
 						<b>Назван минимальный доход для причисления к среднему классу‍</b>
 					</div>
-					<div class="news-data">
-						<div class="news-theme">/ Политика</div>
+					<div class="news-bottom-data">
+						<div class="news-3-theme">/ Политика</div>
 						<div class="news-time">
 							<img src="img/time.png">
 							11:39
@@ -341,8 +343,8 @@
 					<img src="img/vk-logo.png">
 					<img src="img/fb-logo.png">
 					<img src="img/twitter-logo.png">
-					<img src="img/instagram-logo.png">
-					<div class="element-footer">
+					<img src="img/instagram-logo.png" class="last-img">
+					<div class="element-footer call-number">
 						<img src="img/phone.png" class="logotips">
 						+7 (499) 995-55-55
 					</div>
