--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@
 							Кот Ахилл предсказал победу российской сборной над Египтом на ЧМ-2018
 						</div>
 						<div class="news-data">
-							<div class="news-theme">/ ЧМ по футболу</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<div class="news-theme"><a href="#" class="cat">/ ЧМ по футболу</a></div>
+							<time class="news-time">
 								10:48
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								15
 							</div>
 						</div>
@@ -68,13 +66,11 @@
 							«Нафтогаз»: суд разрешил заморозить активы «Газпрома» в Великобритании
 						</div>
 						<div class="news-data">
-							<div class="news-theme">/ Политика</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<div class="news-theme"><a href="#" class="cat">/ Политика</a></div>
+							<time class="news-time">
 								10:48
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								15
 							</div>
 						</div>
@@ -84,13 +80,11 @@
 							Минтранс предписал оборудовать общественный транспорт кондиционерами
 						</div>
 						<div class="news-data">
-							<div class="news-theme">/ Транспорт</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<div class="news-theme"><a href="#" class="cat">/ Транспорт</a></div>
+							<time class="news-time">
 								10:48
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								15
 							</div>
 						</div>
@@ -100,13 +94,11 @@
 							Летние кафе Москвы временно закроются из-за непогоды
 						</div>
 						<div class="news-data">
-							<div class="news-theme">/ Погода</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<div class="news-theme"><a href="#" class="cat">/ Погода</a></div>
+							<time class="news-time">
 								10:48
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								15
 							</div>
 						</div>
@@ -116,13 +108,11 @@
 							Комплексное благоустройство Щелковского шоссе завершится в июне
 						</div>
 						<div class="news-data">
-							<div class="news-theme">/ Транспорт</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<div class="news-theme"><a href="#" class="cat">/ Транспорт</a></div>
+							<time class="news-time">
 								10:48
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								15
 							</div>
 						</div>
@@ -132,45 +122,39 @@
 							В Москве назвали самое популярное мороженое у болельщиков ЧМ-2018
 						</div>
 						<div class="news-data">
-							<div class="news-theme">/ ЧМ по футболу</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<div class="news-theme"><a href="#" class="cat">/ ЧМ по футболу</a></div>
+							<time class="news-time">
 								10:48
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								15
 							</div>
 						</div>
 					</article>
 				</div>
-				<!-- <input type="button" name="allNews" value="Все новости" class="all-news"> -->
 				<a class="all-news" href="#">Все новости</a>
 			</aside>
 			<div class="main-center">
 				<article class="news-1">
-					<div class="news-1-theme">/ Политика</div>
-					<div class="news-1-title"><b>В Крыму отреагировали на слова Кравчука о возврате полуострова</b></div>
+					<div class="news-1-theme"><a href="#" class="cat">/ Политика</a></div>
+					<h1 class="news-1-title">В Крыму отреагировали на слова Кравчука о возврате полуострова</h1>
 					<div class="news-1-data">
 						<div class="news-1-date">19 Июня 2018</div>
-						<div class="news-1-time">
-							<img src="img/clock.png">
+						<time class="news-1-time">
 							10:48
-						</div>
+						</time>
 					</div>
 				</article>
 				<div class="center">
 					<article class="news-item">
 						<img class="news-img" src="img/news-bg-2.png">
 						<div class="news-data">
-							<div class="news-title-center">Алексей Навальный объявил акцию против пенсионной реформы 1 июля</div>
-							<div class="news-theme news-center-theme">/ Политика</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<h1 class="news-title-center">Алексей Навальный объявил акцию против пенсионной реформы 1 июля</h1>
+							<div class="news-theme news-center-theme"><a href="#" class="cat">/ Политика</a></div>
+							<time class="news-time">
 								10:48
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								15
 							</div>
 						</div>
@@ -178,16 +162,14 @@
 					<article class="news-item">
 						<img src="img/news-bg-3.png">
 						<div class="news-data">
-							<div class="news-title-center">
+							<h1 class="news-title-center">
 								Дума увеличила пошлины за выдачу загранпаспортов и водительских прав
-							</div>
-							<div class="news-theme news-center-theme">/ Политика</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							</h1>
+							<div class="news-theme news-center-theme"><a href="#" class="cat">/ Политика</a></div>
+							<time class="news-time">
 								12:33
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								36
 							</div>
 						</div>
@@ -195,14 +177,12 @@
 					<article class="news-item">
 						<img src="img/news-bg-4.png">
 						<div class="news-data">
-							<div class="news-title-center">В России заработал стриминговый сервис YouTube</div>
-							<div class="news-theme news-center-theme">/ Интернет</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<h1 class="news-title-center">В России заработал стриминговый сервис YouTube</h1>
+							<div class="news-theme news-center-theme"><a href="#" class="cat">/ Интернет</a></div>
+							<time class="news-time">
 								11:17
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								10
 							</div>
 						</div>
@@ -210,14 +190,12 @@
 					<article class="news-item">
 						<img src="img/news-bg-5.png">
 						<div class="news-data">
-							<div class="news-title-center">Кейн признан лучшим игроком матча ЧМ-2018 Тунис — Англия</div>
-							<div class="news-theme news-center-theme">/ Политика</div>
-							<div class="news-time">
-								<img src="img/time.png">
+							<h1 class="news-title-center">Кейн признан лучшим игроком матча ЧМ-2018 Тунис — Англия</h1>
+							<div class="news-theme news-center-theme"><a href="#" class="cat">/ Политика</a></div>
+							<time class="news-time">
 								11:39
-							</div>
+							</time>
 							<div class="news-comment">
-								<img src="img/comment.png">
 								25
 							</div>
 						</div>
@@ -229,65 +207,58 @@
 				<img src="img/baner2.png" class="baner2">
 			</aside>
 			<article class="news-2">
-				<div class="news-2-theme">/ Политика</div>
-				<div class="news-2-title"><b>Пекин обвинил Вашингтон в развязывании торговой войны</b></div>
+				<div class="news-2-theme"><a href="#" class="cat">/ Политика</a></div>
+				<h1 class="news-2-title">Пекин обвинил Вашингтон в развязывании торговой войны</h1>
 				<div class="news-1-data">
 					<div class="news-2-date">19 Июня 2018</div>
-					<div class="news-1-time">
-						<img src="img/clock.png">
+					<time class="news-1-time">
 						10:48
-					</div>
+					</time>
 				</div>
-				<div class="news-text">
+				<p class="news-text">
 					Министерство коммерции Китая заявило, что Пекин примет «качественные» и «количественные» меры, если президент США Дональд Трамп введет дополнительные пошлины на китайские товары
-				</div>
+				</p>
 			</article>
 			<div class="famous-news">
-				<div class="right-bottom-title"><b>Самые читаемые новости</b></div>
+				<h1 class="right-bottom-title">Самые читаемые новости</h1>
 				<article class="news">
-					<div class="news-bottom-title">
-						<b>В Турции пообещали найти альтернативу из-за отказа США поставить F-35</b>
-					</div>
+					<h1 class="news-bottom-title">
+						В Турции пообещали найти альтернативу из-за отказа США поставить F-35
+					</h1>
 					<div class="news-bottom-data">
-						<div class="news-3-theme">/ Политика</div>
-						<div class="news-time">
-							<img src="img/time.png">
+						<div class="news-3-theme"><a href="#" class="cat">/ Политика</a></div>
+						<time class="news-time">
 							11:39
-						</div>
+						</time>
 						<div class="news-comment">
-							<img src="img/comment.png">
 							25
 						</div>
 					</div>
 				</article>
 				<article class="news">
-					<div class="news-bottom-title">
-						<b>Назван минимальный доход для причисления к среднему классу‍</b>
-					</div>
+					<h1 class="news-bottom-title">
+						Назван минимальный доход для причисления к среднему классу‍
+					</h1>
 					<div class="news-bottom-data">
-						<div class="news-3-theme">/ Политика</div>
-						<div class="news-time">
-							<img src="img/time.png">
+						<div class="news-3-theme"><a href="#" class="cat">/ Политика</a></div>
+						<time class="news-time">
 							11:39
-						</div>
+						</time>
 						<div class="news-comment">
-							<img src="img/comment.png">
 							25
 						</div>
 					</div>
 				</article>
 				<article class="news">
-					<div class="news-bottom-title">
-						<b>Назван минимальный доход для причисления к среднему классу‍</b>
-					</div>
+					<h1 class="news-bottom-title">
+						Назван минимальный доход для причисления к среднему классу‍
+					</h1>
 					<div class="news-bottom-data">
-						<div class="news-3-theme">/ Политика</div>
-						<div class="news-time">
-							<img src="img/time.png">
+						<div class="news-3-theme"><a href="#" class="cat">/ Политика</a></div>
+						<time class="news-time">
 							11:39
-						</div>
+						</time>
 						<div class="news-comment">
-							<img src="img/comment.png">
 							25
 						</div>
 					</div>
@@ -299,58 +270,38 @@
 		<div class="footer-top">
 			<div class="content">
 				<div class="row-footer">
-					<div class="element-footer">Главная</div>
-					<div class="element-footer">
-						Политика
-					</div>
-					<div class="element-footer">
-						Общество
-					</div>
-					<div class="element-footer">
-						Экономика
-					</div>
-					<div class="element-footer">
-						В мире
-					</div>
-				</div>
-				<div class="row-footer">
-					<div class="element-footer">
-						Путешествия
-					</div>
-					<div class="element-footer">
-						Спорт
-					</div>
-					<div class="element-footer">
-						Наука
-					</div>
-					<div class="element-footer">
-						Туризм
-					</div>
+					<ul class="footer-left">
+						<li class="element-footer"><a href="#">Главная</a></li>
+						<li class="element-footer"><a href="#">Политика</a></li>
+						<li class="element-footer"><a href="#">Общество</a></li>
+						<li class="element-footer"><a href="#">Экономика</a></li>
+						<li class="element-footer"><a href="#">В мире</a></li>
+						<li class="element-footer"><a href="#">Путешествия</a></li>
+						<li class="element-footer"><a href="#">Спорт</a></li>
+						<li class="element-footer"><a href="#">Наука</a></li>
+						<li class="element-footer"><a href="#">Туризм</a></li>
+					</ul>
 				</div>
 				<div class="row-footer center-row-footer">
-					<img src="img/logo-footer.png" class="logo-footer">
-					<div class="element-footer">
-						Об агенстве
-					</div>
-					<div class="element-footer">
-						Контакты
-					</div>
-					<div class="element-footer">
-						Опубликовать новость
-					</div>
+					<a href="#"><img src="img/logo-footer.png" class="logo-footer"></a>
+					<ul class="footer-center">
+						<li class="element-footer"><a href="#">Об агенстве</a></li>
+						<li class="element-footer"><a href="#">Контакты</a></li>
+						<li class="element-footer"><a href="#">Опубликовать новость</a></li>
+					</ul>
 				</div>
 				<div class="row-footer right-row-footer">
-					<img src="img/vk-logo.png">
-					<img src="img/fb-logo.png">
-					<img src="img/twitter-logo.png">
-					<img src="img/instagram-logo.png" class="last-img">
+					<ul class="social-logo">
+						<li class="element-footer-social"><a href="#"><img src="img/vk-logo.png"></a></li>
+						<li class="element-footer-social"><a href="#"><img src="img/fb-logo.png"></a></li>
+						<li class="element-footer-social"><a href="#"><img src="img/twitter-logo.png"></a></li>
+						<li class="element-footer-social"><a href="#"><img src="img/instagram-logo.png"></a></li>
+					</ul>
 					<div class="element-footer call-number">
-						<img src="img/phone.png" class="logotips">
-						+7 (499) 995-55-55
+						<a href="#">+7 (499) 995-55-55</a>
 					</div>
-					<div class="element-footer">
-						<img src="img/mail.png" class="logotips">
-						info@agency.ru
+					<div class="element-footer e-mail">
+						<a href="#">info@agency.ru</a>
 					</div>
 				</div>
 			</div>
