fixed html/css again

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="top-header-right">
 				<div class="term">+22°C</div>
 				<form class="search">
-						<input type="search" placeholder="Введите текст">
+						<input type="search" placeholder="Поиск по сайту">
 						<button class="search-button"></button>
 				</form>
 			</div>
