--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 					</article>
 				</div>
 				<a class="all-news" href="#">Все новости</a>
+				<div class="money">
+
+				</div>
 			</aside>
 			<div class="main-center">
 				<article class="news-1">
@@ -310,5 +313,7 @@
 			© Новостное агентство, 2017-2018 все права защищены
 		</div>
 	</footer>
+	<script src="js/jquery-3.4.1.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
